@@ -69,8 +69,8 @@ run the same code.
 It should be used for Delaunay triangulations instead of
 using joggled input ('<A href="qh-optq.htm#QJn">QJ</A>').
 
-<p><i>Brad Barber, Cambridge MA,
-2003/12/30 <!--
+<p><i>Brad Barber, Arlington MA,
+2010/01/09 <!--
 --> </i></p>
 
 <p><b>Copyright &copy; 1998-2010 C.B. Barber</b></p>
