@@ -30,23 +30,24 @@ width="100" height="100"></a> Qhull Downloads</h1>
         <p>Visit <a href="http://www.qhull.org/news">Qhull News</a>
         for news, bug reports, change history, and users.</p>
 
-        <p>A serious bug was found in Qhull 2003.1.  Please upgrade to 2010.1.</p>
+        <p>A serious bug was found in Qhull 2003.1 and 2009.1.  Please upgrade to 2010.1
+        or apply <a href=http://www.qhull.org/download/poly.c-qh_gethash.patch>poly.c-qh_gethash.patch</a></p>.
         </li>
     <li><a
         href="http://www.qhull.org/download/qhull-2010.1.zip">Download:
         Qhull 2010.1 for Windows</a> (2.4 Mbytes) <p>Type: console programs for
         Windows</p>
-        <p>Includes executables, documentation, sources files, and a cygwin Makefile. It runs in a
+        <p>Includes executables, documentation, and sources files. It runs in a
         DOS window.</p>
     </li>
         <li><a href="http://www.qhull.org/download/qhull-2010.1-src.tgz">Download: Qhull 2010.1 for Unix</a> (660K)
         <p>Type: C source code for 32-bit and 64-bit architectures</p>
-        <p>Includes documentation, source files, a simple Makefile, DevStudio project files, and Qt project files.
+        <p>Includes documentation, source files, a simple Makefile, CMakeLists, DevStudio projects, and Qt projects.
             Includes preliminary C++ support.
         The C++ interface may change without notice.
         If using gcc 4.1, 4.2, or 4.3, please compile qset.c with
         -fno-strict-aliasing (otherwise qhull segfaults) [Karas, Krishnaswami].
-        See <a href=http://www.qhull.org/news/#bugs>Bugs</a> [Apr 2008] for a patch.
+        See <a href=http://www.qhull.org/news/#bugs>Bugs</a> [Apr 2008].
        </p>
         <p>Debian, rpm, and Autoconf distributions will appear later</p>
     </li>
@@ -56,14 +57,13 @@ width="100" height="100"></a> Qhull Downloads</h1>
             and test programs.  The C++ interface may change without notice.
             If using gcc 4.1, 4.2, or 4.3, please compile qset.c with
         -fno-strict-aliasing (otherwise qhull segfaults) [Karas, Krishnaswami].
-        See <a href=http://www.qhull.org/news/#bugs>Bugs</a> [Apr 2008] for a patch.
+        See <a href=http://www.qhull.org/news/#bugs>Bugs</a> [Apr 2008].
        </p>
    </li>
         <li><a href="http://www.qhull.org/download/qhull-2009.1.1.tar.gz">Download: Qhull 2009.1.1 for Unix</a> (725K)
         <p>Type: C source code for Unix systems</p>
         <p>Patch release of Qhull 2009.1 with Autoconf/Automake/Libtool
-        support [R. Laboissiere].  Apply <a href=http://www.qhull.org/download/poly.c-qh_gethash.patch>poly.c-qh_gethash.patch</a>
-        to Qhull 2003.1 and 2009.1. If using gcc 4.1, 4.2, or 4.3, please compile qset.c with
+        support [R. Laboissiere].  If using gcc 4.1, 4.2, or 4.3, please compile qset.c with
         -fno-strict-aliasing (otherwise qhull segfaults) [Karas, Krishnaswami].
         See <a href=http://www.qhull.org/news/#bugs>Bugs</a> [Apr 2008].
        </p>
@@ -104,14 +104,14 @@ and upgraded it to 2002.1.
         -->
 
     <li><a href=http://www6.uniovi.es/ftp/pub/mirrors/geom.umn.edu/software/ghindex.html>Spanish
-            mirror site</a> <p>Download Qhull's current and
+            mirror site</a> <p>Download Qhull's
                 previous versions from <a href=http://www.etsimo.uniovi.es/derechos.html>Servidor
                 WWW de la Escuela de Minas</a> of the Universidad de Oviedo.</p>
     </li>
     <li><a
         href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.117.405&rep=rep1&type=url&i=0">Download:
         Article about Qhull</a> (307K) <!-- http://www.cise.ufl.edu/~ungor/courses/fall06/papers/QuickHull.pdf -->
-        <p>Type: PDF on Citeseer</p>
+        <p>Type: PDF on <a href="http://citeseerx.ist.psu.edu/showciting?doi=10.1.1.117.405&sort=cite">Citeseer</a></p>
         <p>Barber, C.B., Dobkin, D.P., and Huhdanpaa, H.T.,
         &quot;The Quickhull algorithm for convex hulls,&quot; <i>ACM
         Transactions on Mathematical Software</i>, 22(4):469-483, Dec 1996 [<a
