@@ -307,6 +307,10 @@ a default value for <i>n</i>. <a href="../src/user.h#JOGGLEdefault">User.h</a>
 defines these parameters and a maximum number of retries. See <a
 href="qh-impre.htm#joggle">Merged facets or joggled input</a>. </p>
 
+<p>Users of joggled input should consider converting to
+triangulated output ('<A href="../html/qh-optq.htm#Qt">Qt</A>').  Triangulated output is
+approximately 1000 times more accurate than joggled input.
+
 <p>Option 'QJ' also sets '<a href="qh-optq.htm#Qbb">Qbb</a>' for
 Delaunay triangulations and Voronoi diagrams. It does not set
 'Qbb' if '<a href="qh-optq.htm#Qbk">Qbk:n</a>' or '<a
